# vibe-coding-games

./: .gitignore  README.md  asset_manager.py  config.py  entities.py  game_data_manager.py  main.py  map.py  modifiers.py  play.sh  pyproject.toml  sound_manager.py  states.py  ui.py  wave_manager.py
data/: enemies.json  projectiles.json  towers.json  waves.json
flappybird/: Pipfile  flappy_bird.py  pyproject.toml
tetris/: README.md  main.py
tower-defense/: README.md  main.py  map.py  pyproject.toml  states.py  ui.py  wave_manager.py
tower-defense/data/: enemies.json  projectiles.json  waves.json
