[project]
name = "tower-defense"
version = "0.1.0"
description = "A tower defense game"
dependencies = [
    "pygame==2.5.2",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["data*", "assets*"] 